--- a/psychologists.html
+++ b/psychologists.html
@@ -89,6 +89,65 @@
                 </div>
             </div>
         </section>
+        <section class="wait">
+            <div class="container">
+                <div class="wait__body">
+                    <div class="wait__title title">Ждем от вас</div>
+                    <div class="wait__grid grid-wait">
+                        <article class="grid-wait__item">
+                            <img src="img/psychologists/wait/book.png" alt="">
+                            <div class="grid-wait__content">
+                                <h3 class="grid-wait__title">Документы</h3>
+                                <p class="grid-wait__text text">подтверждающие дополнительное образование в определенном направлении психотерапии. Мы рассматриваем только длительные программы обучения, около 500 часов.</p>
+                            </div>
+                        </article>
+                        <article class="grid-wait__item">
+                            <h3 class="grid-wait__title">Диплом</h3>
+                            <p class="grid-wait__text text">об окончании профильного высшего учебного заведения.</p>
+                        </article>
+                        <article class="grid-wait__item">
+                            <h3 class="grid-wait__title">Документы</h3>
+                            <p class="grid-wait__text text">супервизии от 20 часов в год.</p>
+                            
+                        </article>
+                        <article class="grid-wait__item">
+                            <h3 class="grid-wait__title">Документы</h3>
+                            <p class="grid-wait__text text">личной терапии от 50 часов в год.</p>
+                        </article>
+                        <article class="grid-wait__item">
+                            <img src="img/psychologists/wait/check.png" alt="">
+                            <div class="grid-wait__content">
+                                <h3 class="grid-wait__title">Подтвержденнный опыт работы</h3>
+                                <p class="grid-wait__text text">не менее 3-х лет. Учитывается только опыт консультирования за оплату и не в рамках учебной программы.</p>
+                            </div>
+                        </article>
+                        
+                    </div>
+                    <div class="wait__slider slider-wait">
+                        <article class="slider-wait__item">
+                            <h3 class="slider-wait__title">Документы</h3>
+                            <p class="grid-wait__text text">подтверждающие дополнительное образование в определенном направлении психотерапии. Мы рассматриваем только длительные программы обучения, около 500 часов.</p>
+                        </article>
+                        <article class="slider-wait__item">
+                            <h3 class="slider-wait__title">Диплом</h3>
+                            <p class="grid-wait__text text">об окончании профильного высшего учебного заведения.</p>
+                        </article>
+                        <article class="slider-wait__item">
+                            <h3 class="slider-wait__title">Прохождение </h3>
+                            <p class="grid-wait__text text">супервизии от 20 часов в год.</p>
+                        </article>
+                        <article class="slider-wait__item">
+                            <h3 class="slider-wait__title">Прохождение </h3>
+                            <p class="grid-wait__text text">личной терапии от 50 часов в год.</p>
+                        </article>
+                        <article class="slider-wait__item">
+                            <h3 class="slider-wait__title">Подтвержденнный опыт работы</h3>
+                            <p class="grid-wait__text text">не менее 3-х лет. Учитывается только опыт консультирования за оплату и не в рамках учебной программы.</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
