--- a/psychologists.html
+++ b/psychologists.html
@@ -148,6 +148,140 @@
                 </div>
             </div>
         </section>
+        <section class="start">
+            <div class="container">
+                <div class="start__body">
+                    <h3 class="start__title title">4 шага для начала работы в YouMi</h3>
+                    <div class="start__box">
+                        <article class="start__item item-start">
+                            <picture>
+                                <source srcset="img/psychologists/start/one-mini.png" media="(max-width:768px)">
+                                <img src="img/psychologists/start/one.png" alt="one">
+                            </picture>
+                            <h3 class="item-start__title">Заполните анкету</h3>
+                            <p class="item-start__text text">и прикрепите копии ваших дипломов об окончании профильного высшего учебного заведения и документы, подтверждающие дополнительное образование.</p>
+                        </article>
+                        <article class="start__item item-start">
+                            <picture>
+                                <source srcset="img/psychologists/start/two-mini.png" media="(max-width:768px)">
+                                <img src="img/psychologists/start/two.png" alt="two">
+                            </picture>
+                            <h3 class="item-start__title">Дождитесь подтверждения</h3>
+                            <p class="item-start__text text">от отдела проверки. Средний срок ожидания ответа 5-7 дней.</p>
+                        </article>
+                        <article class="start__item item-start">
+                            <picture>
+                                <source srcset="img/psychologists/start/three-mini.png" media="(max-width:768px)">
+                                <img src="img/psychologists/start/three.png" alt="three">
+                            </picture>
+                            <h3 class="item-start__title">Пройдите дополнительный отбор,</h3>
+                            <p class="item-start__text text">включающий интервью и тестирование на профессиональную компетентность и знание этических норм.</p>
+                        </article>
+                        <article class="start__item item-start">
+                            <picture>
+                                <source srcset="img/psychologists/start/for-mini.png" media="(max-width:768px)">
+                                <img src="img/psychologists/start/for.png" alt="for">
+                            </picture>
+                            <h3 class="item-start__title">Заполните данные</h3>
+                            <p class="item-start__text text">профиля на сайте YouMi. Выберите часы в расписании и начните практику.</p>
+                        </article>
+
+                    </div>
+                    <button class="start__button button">Присоединиться</button>
+                </div>
+            </div>
+        </section>
+        <section class="ask">
+            <div class="container">
+                <div class="ask__body">
+                    <h3 class="ask__title title">Вопросы - ответы</h3>
+                    <div class="ask__wrapper">
+                        <div class="ask__item item-ask item-ask_1 ">
+                            <div class="item-ask__top">
+                                <article class="item-ask__content">
+                                    <h3 class="item-ask__title">Могу ли я попасть в YouMi, если на данный момент нахожусь в процессе обучения?</h3>
+                                </article>
+                                <div class="item-ask__icon item-ask__icon_1 open"></div>
+                            </div>
+                            <div class="item-ask__text text item-ask__text_1 open">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                         </div>
+                        <div class="ask__item item-ask item-ask_2 ">
+                            <div class="item-ask__top">
+                                <article class="item-ask__content">
+                                    <h3 class="item-ask__title">Как клиенты записываются на консультации?</h3>
+                                </article>
+                                <div class="item-ask__icon item-ask__icon_2"></div>
+                            </div>
+                            <div class="item-ask__text text item-ask__text_2">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                         </div>
+
+                         <div class="ask__item item-ask item-ask_3 ">
+                            <div class="item-ask__top">
+                                <article class="item-ask__content">
+                                    <h3 class="item-ask__title">Собиратете ли вы обратную связь и отзывы психологов о работе сервиса?</h3>
+                                </article>
+                                <div class="item-ask__icon item-ask__icon_3"></div>
+                            </div>
+                            <div class="item-ask__text text item-ask__text_3">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                         </div>
+
+                         <div class="ask__item item-ask item-ask_4 ">
+                            <div class="item-ask__top">
+                                <article class="item-ask__content">
+                                    <h3 class="item-ask__title">Сколько сессий обычно проходят клиенты?</h3>
+                                </article>
+                                <div class="item-ask__icon item-ask__icon_4"></div>
+                            </div>
+                            <div class="item-ask__text text item-ask__text_4">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                         </div>
+
+                         <div class="ask__item item-ask item-ask_5 ">
+                            <div class="item-ask__top">
+                                <article class="item-ask__content">
+                                    <h3 class="item-ask__title">Могу ли я изменить расписание, делать перерывы в работе или уйти в отпуск?</h3>
+                                </article>
+                                <div class="item-ask__icon item-ask__icon_5"></div>
+                            </div>
+                            <div class="item-ask__text text item-ask__text_5">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                         </div>
+
+                         <div class="ask__item item-ask item-ask_6 ">
+                            <div class="item-ask__top">
+                                <article class="item-ask__content">
+                                    <h3 class="item-ask__title">Объясняете ли вы причину отказа от сотрудничества и могу ли я расчитывать на повторное рассмотрение моей кандидатуры?</h3>
+                                </article>
+                                <div class="item-ask__icon item-ask__icon_6"></div>
+                            </div>
+                            <div class="item-ask__text text item-ask__text_6">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                         </div>
+                    </div>
+                    <button class="ask__button button">Ещё</button>
+                    <button class="ask__button button">Больше вопросов</button>
+                </div>
+            </div>
+        </section>
+        <section class="team">
+            <div class="container">
+                <div class="team__body">
+                    <div class="team__box">
+                        <div class="team__content">
+                            <div class="team__title title">Станьте частью команды YouMi</div>
+                            <div class="team__text text">Отправьте заявку, пройдите отбор, выберите часы в расписании и начните терапию.</div>
+                        </div>
+                        <div class="team__img">
+                            <img src="img/psychologists/team/woman.png" alt="woman">
+                        </div>
+                    </div>
+                    <button class="team__button button">Оставить заявку</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
