--- a/psychologists.html
+++ b/psychologists.html
@@ -269,16 +269,27 @@
         <section class="team">
             <div class="container">
                 <div class="team__body">
-                    <div class="team__box">
+                    <article class="team__box">
                         <div class="team__content">
-                            <div class="team__title title">Станьте частью команды YouMi</div>
-                            <div class="team__text text">Отправьте заявку, пройдите отбор, выберите часы в расписании и начните терапию.</div>
+                            <h3 class="team__title title">Станьте частью команды YouMi</h3>
+                            <p class="team__text text">Отправьте заявку, пройдите отбор, выберите часы в расписании и начните терапию.</p>
                         </div>
                         <div class="team__img">
                             <img src="img/psychologists/team/woman.png" alt="woman">
                         </div>
-                    </div>
+                    </article>
                     <button class="team__button button">Оставить заявку</button>
+                </div>
+            </div>
+        </section>
+        <section class="remain">
+            <div class="container">
+                <div class="remain__body">
+                    <div class="remain__box">
+                        <h3 class="remain__title title">Остались вопросы?</h3>
+                        <p class="remain__text text">Задайте их в чат поддержки психологов</p>
+                        <button class="remain__button">@youmipsy</button>
+                    </div>
                 </div>
             </div>
         </section>
